; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_filter-jbig2.c_error_callback.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_filter-jbig2.c_error_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JBIG2_SEVERITY_FATAL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [32 x i8] c"jbig2dec error: %s (segment %d)\00", align 1
@JBIG2_SEVERITY_WARNING = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [34 x i8] c"jbig2dec warning: %s (segment %d)\00", align 1
@JBIG2_SEVERITY_INFO = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [31 x i8] c"jbig2dec info: %s (segment %d)\00", align 1
@JBIG2_SEVERITY_DEBUG = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [32 x i8] c"jbig2dec debug: %s (segment %d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64, i32)* @error_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @error_callback(i8* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %9, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @JBIG2_SEVERITY_FATAL, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %4
  %16 = load i32*, i32** %9, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @fz_warn(i32* %16, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %17, i32 %18)
  br label %50

20:                                               ; preds = %4
  %21 = load i64, i64* %7, align 8
  %22 = load i64, i64* @JBIG2_SEVERITY_WARNING, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %29

24:                                               ; preds = %20
  %25 = load i32*, i32** %9, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @fz_warn(i32* %25, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* %26, i32 %27)
  br label %49

29:                                               ; preds = %20
  %30 = load i64, i64* %7, align 8
  %31 = load i64, i64* @JBIG2_SEVERITY_INFO, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %38

33:                                               ; preds = %29
  %34 = load i32*, i32** %9, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = load i32, i32* %8, align 4
  %37 = call i32 @fz_warn(i32* %34, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.2, i64 0, i64 0), i8* %35, i32 %36)
  br label %48

38:                                               ; preds = %29
  %39 = load i64, i64* %7, align 8
  %40 = load i64, i64* @JBIG2_SEVERITY_DEBUG, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %47

42:                                               ; preds = %38
  %43 = load i32*, i32** %9, align 8
  %44 = load i8*, i8** %6, align 8
  %45 = load i32, i32* %8, align 4
  %46 = call i32 @fz_warn(i32* %43, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.3, i64 0, i64 0), i8* %44, i32 %45)
  br label %47

47:                                               ; preds = %42, %38
  br label %48

48:                                               ; preds = %47, %33
  br label %49

49:                                               ; preds = %48, %24
  br label %50

50:                                               ; preds = %49, %15
  ret void
}

declare dso_local i32 @fz_warn(i32*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
